fix: remove spacing

--- a/Components/Ratings/ratings.css
+++ b/Components/Ratings/ratings.css
@@ -1,5 +1,5 @@
 .filled{
-    color: grey;
+    color: gray ;
 }
 
 .rating-outdiv{
